improved nav and header

--- a/homepg.html
+++ b/homepg.html
@@ -26,9 +26,9 @@
 
     <nav>
         <div class="nav">
-            </i><a href="#">Home</a>
-            <a href="#">Products</a>
-            <a href="#">Support</a>
+            <a href="#" class="home">Home</a>
+            <a href="#" class="productss">Products</a>
+            <a href="#" class="support">Support</a>
         </div>
     </nav>
 
@@ -36,7 +36,7 @@
 
         <section>
             <div class="video">
-            <video src="Lian Li Gaming PC Build - Time Lapse_HD.mp4" width="400" autoplay muted></video>
+            <video src="Lian Li Gaming PC Build - Time Lapse_HD.mp4" width="400" autoplay muted loop></video>
             </div>
         </section>
 
