--- a/homepg.html
+++ b/homepg.html
@@ -34,11 +34,11 @@
 
     <main>
 
-        <section>
+        <!-- <section>
             <div class="video">
             <video src="Lian Li Gaming PC Build - Time Lapse_HD.mp4" width="400" autoplay muted loop></video>
             </div>
-        </section>
+        </section> -->
 
         <section>
             <div class="product">Products:</div><br>
