--- a/homepg.html
+++ b/homepg.html
@@ -14,7 +14,7 @@
     <section class="maincontent">
     
     <div class="header">
-        <h1 class="lumitech">Lumi Techs</h1>
+        <h1><a href="#" class="lumitech"> Lumi Techs</a></h1>
         <form action="">
             <input type="text" name="search" placeholder="Search" class="searchbox">
         </form>
