founder tab changes

--- a/homepg.html
+++ b/homepg.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@100&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -60,7 +63,7 @@
             </div>
         </section>
         <br>
-        <section>
+        <section class="monitorss">
 
             <span class="monitor">Monitors:</span><br>
             <div class="Mpics">
@@ -80,7 +83,7 @@
         </section>
     </section>
 
-        <section class="founderinfo">
+        <!-- <section class="founderinfo">
             <div class="founder">
             <h2>Our Founder</h2>
             </div>
@@ -98,7 +101,22 @@
             <div class="description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae error animi, quos ea deserunt laudantium quia rerum ratione totam nisi veniam, optio aliquid quaerat esse voluptatibus incidunt, ad accusamus consequuntur.
             </div>
-        </section>
+        </section> -->
+        
+        <div class="whole">
+            <div class="rectangle">
+                <div class="comma">"</div>
+                <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum modi provident recusandae minus accusamus aliquid veritatis ex in, officiis maxime ipsum earum, voluptates deserunt sint suscipit rerum sequi libero itaque!
+                </div>
+                <div class="comma2">"</div>
+                
+                <div class="name"><div class="anish">Anish Baraily&nbsp;</div>Founder</div>
+            </div>
+            <div class="photo">
+                <img src="my.jpg" alt="" height="100px" width="100px" class="imgg">
+            </div>
+        </div>
+
 
     </main>
 
